small edits to paragraph in g2

--- a/Appendices/Health/method_analysis.tex
+++ b/Appendices/Health/method_analysis.tex
@@ -38,7 +38,7 @@ We use modified versions of Equation~\eqref{eq:trans} to model the following add
 
 Estimation of the parameters characterizing these outcomes is also performed separately. The economic outcomes that we include are labor income, for which we use the forecast detailed in Section~\ref{section:cbamethodology}, as well as labor force participation, relationship status, and childbearing. 
 
-Tables~\ref{table:supertab1} to~\ref{table:supertab3} list the variables determining each of the states and health and economic outcomes that we consider. For each of these we list: (1) the outcome; the variable type---e.g., absorbing state, binary outcome, continuous outcome; (3) initial health state occupancies and other other outcomes---$\tilde{\bm{D}}_0$ in Equation~\eqref{eq:trans}; (4) lagged health-state occupancies---$\tilde{\bm{D}}_{a-1}$ in Equation~\eqref{eq:trans}; (5) and (6) other health and economic outcomes used to determine the outcome of interest---$\bm{W}_a$ in Equation~\eqref{eq:trans}; and (7) background variables---$\bm{B}$ in Equation~\eqref{eq:trans}. From this information, the reader can understand the type of outcome being model, its classification, as well determinants and their categorization according with Equation~\eqref{eq:trans}. The outcomes that help predict each other are based on research and advice of clinicians and other medical professionals, as explained and justified in \citet{Goldman_etal_2015_Future-Elderly-Model-Report}.
+Tables~\ref{table:supertab1} to~\ref{table:supertab3} list the variables determining each of the states and health and economic outcomes that we consider. For each of these we list: (1) the outcome; (2) the variable type---e.g., absorbing state, binary outcome, continuous outcome; (3) initial health state occupancies and other other outcomes---$\tilde{\bm{D}}_0$ in Equation~\eqref{eq:trans}; (4) lagged health-state occupancies---$\tilde{\bm{D}}_{a-1}$ in Equation~\eqref{eq:trans}; (5) and (6) other health and economic outcomes used to determine the outcome of interest---$\bm{W}_a$ in Equation~\eqref{eq:trans}; and (7) background variables---$\bm{B}$ in Equation~\eqref{eq:trans}. From this information, the reader can understand the type of outcome being model, its classification, as well as determinants and their categorization according to Equation~\eqref{eq:trans}. The outcomes that help predict each other are based on research and advice of clinicians and other medical professionals, as explained and justified in \citet{Goldman_etal_2015_Future-Elderly-Model-Report}.
 
 % ABSORBING STATES
 \begin{sidewaystable}[htbp!]
